# dbt-cfpb-complaints

./: .env.example  .gitignore  .sqlfluff  CLAUDE.md  DECISIONS.md  README.md  SETUP.md  dbt_project.yml  profiles.yml  pyproject.toml
docs/: catalog.json  data-quality-notes.md  manifest.json  schema.md
exploration/: 00_materialize_raw_cfpb.sql  01_cfpb_summary.sql  02_cfpb_sample.sql  03_cfpb_top_companies.sql  04_cfpb_products_issues.sql  05_name_lists_side_by_side.sql  06_cfpb_company_name_variants.sql  07_cfpb_column_profile.sql  08_cfpb_by_year.sql  09_schemas.sql  10_fdic_columns.sql  12_date_ordering_violations.sql  README.md  verify_product_normalization.sql
exploration/fdic/: exploration.sql  phase3_prep.sql
exploration/validation/: staging_validation.sql  verify_product_normalization.sql
models/: overview.md
models/marts/: _exposures.yml  _metrics.yml  _models.yml  dim_bank.sql  dim_company.sql  dim_date.sql  dim_issue.sql  dim_product.sql  fct_complaints.sql  fct_complaints_bank_enriched.sql  mart_bank_complaint_metrics.sql  mart_bank_complaints_monthly.sql  mart_resolution_time_by_bank_size.sql  metricflow_time_spine.sql
seeds/: company_crosswalk.csv  issue_mapping.csv  product_mapping.csv  subproduct_mapping.csv
snapshots/: company_renames.sql
tests/: assert_complaint_dates_ordered.sql  assert_crosswalk_coverage.sql  assert_dispute_era_nulls.sql  assert_int_complaints_no_fanout.sql  assert_mart_bank_rates_in_range.sql  assert_monthly_mart_era_coherence.sql  assert_monthly_mart_matches_bank_totals.sql  assert_monthly_mart_unique_grain.sql
(+16 files in other folders)
